<resources>
    <string name="app_name">Nail Store Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_db"> Reset Database</string>
    <string name="button_add_contact"> Add new contact</string>
    <string name="button_add_job"> Add new job</string>
    <string name="button_edit"> Edit</string>
    <string name="button_remove"> Remove</string>
    <string name="title"> Title</string>
    <string name="save_job"> Save </string>
    <string name="time_job"> Time </string>
    <string name="edit_job"> Edit </string>
</resources>
